Sec14_Chap146-Overview of Query Parameters: Pierrot optimizations